Priloženije ispoljzujet biblioteku "Vulkan". Rabotajet iniçializaçija ekzemplära "Vulkan".

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,10 +12,26 @@ else()
 	add_compile_options(-Werror -Wall -Wextra -Wconversion)
 endif()
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+	add_definitions(-DDEBUG)
+endif()
+
 find_package(SDL2 REQUIRED)
+find_package(Vulkan REQUIRED)
 
 file(GLOB SOURCES "*.cpp" "*.hpp")
 
 add_executable(Klassenkampf ${SOURCES})
-target_include_directories(Klassenkampf PRIVATE ${SDL2_INCLUDE_DIRS})
-target_link_libraries(Klassenkampf  ${SDL2_LIBRARIES})
+
+target_include_directories(
+	Klassenkampf
+		PRIVATE
+			${SDL2_INCLUDE_DIRS}
+			${Vulkan_INCLUDE_DIRS}
+		)
+
+target_link_libraries(
+	Klassenkampf
+		${SDL2_LIBRARIES}
+		${Vulkan_LIBRARIES}
+	)
