Generirujem zagolovocnyje fajly s binarnikami šejderov, ctoby ne paritsä s zagruzkoj fajlov.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,14 +29,23 @@ endif()
 # Compile shaders.
 function(CompileShader IN_FILE OUT_FILE_DST)
 	file(RELATIVE_PATH OUT_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${IN_FILE})
-	set(OUT_FILE ${CMAKE_CURRENT_BINARY_DIR}/${OUT_FILE})
-	string(REPLACE ".glsl" ".sprv" OUT_FILE ${OUT_FILE})
+	set(OUT_FILE_BASE ${CMAKE_CURRENT_BINARY_DIR}/${OUT_FILE})
+	string(REPLACE ".glsl" ".sprv" OUT_FILE_SPRV ${OUT_FILE_BASE})
+	string(REPLACE ".glsl" ".sprv.h" OUT_FILE_H ${OUT_FILE_BASE})
+	get_filename_component(VARIABLE_NAME ${IN_FILE} NAME)
+	string(REPLACE ".glsl" "" VARIABLE_NAME ${VARIABLE_NAME})
+	string(REPLACE "." "_" VARIABLE_NAME ${VARIABLE_NAME})
 	add_custom_command(
-		OUTPUT ${OUT_FILE}
+		OUTPUT ${OUT_FILE_SPRV}
 		DEPENDS ${IN_FILE}
-		COMMAND ${GLSLANGVALIDATOR} -V ${IN_FILE} -o ${OUT_FILE}
+		COMMAND ${GLSLANGVALIDATOR} -V ${IN_FILE} -o ${OUT_FILE_SPRV}
 		)
-	set(${OUT_FILE_DST} ${OUT_FILE} PARENT_SCOPE)
+	add_custom_command(
+		OUTPUT ${OUT_FILE_H}
+		DEPENDS ${OUT_FILE_SPRV}
+		COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_SOURCE_DIR}/bin2c.cmake ${OUT_FILE_SPRV} ${OUT_FILE_H} c_${VARIABLE_NAME}_file_content
+		)
+	set(${OUT_FILE_DST} ${OUT_FILE_H} PARENT_SCOPE)
 endfunction()
 
 file(GLOB SHADERS "shaders/*")
@@ -49,6 +58,7 @@ endforeach()
 
 file(GLOB SOURCES "*.cpp" "*.hpp")
 add_executable(Klassenkampf ${SOURCES} ${SHADERS} ${SHADERS_COMPILED})
+target_include_directories(Klassenkampf PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 target_include_directories(
 	Klassenkampf
