--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_EXTENSIONS Off)
 # Setup compiler options.
 if(MSVC)
 	add_compile_options(/utf-8 /W3 /WX)
+	add_definitions(-DNOMINMAX)
 else()
 	add_compile_options(-Werror -Wall -Wextra -Wconversion)
 endif()
