--- a/src/Game/CMakeLists.txt
+++ b/src/Game/CMakeLists.txt
@@ -1,5 +1,10 @@
 # Search dependencies.
-find_package(SDL2 REQUIRED)
+if(WIN32)
+	set(SDL2_INCLUDE_DIRS ${SDL2_DIR}/include)
+	set(SDL2_LIBRARIES ${SDL2_DIR}/lib/x64/SDL2.lib)
+else()
+	find_package(SDL2 REQUIRED)
+endif()
 find_package(Vulkan REQUIRED)
 find_program(GLSLANGVALIDATOR glslangValidator)
 if(NOT GLSLANGVALIDATOR)
