--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/stb"]
 	path = src/stb
 	url = https://github.com/Panzerschrek/stb.git
+[submodule "src/tinyxml2"]
+	path = src/tinyxml2
+	url = https://github.com/Panzerschrek/tinyxml2.git
