--- a/src/ModelExporter/CMakeLists.txt
+++ b/src/ModelExporter/CMakeLists.txt
@@ -1,3 +1,3 @@
-file(GLOB_RECURSE SOURCES "*.cpp" "*.hpp")
+file(GLOB_RECURSE SOURCES "*.cpp" "*.hpp" "../Common/*.cpp" "../Common/*.hpp")
 add_executable(ModelExporter ${SOURCES} ${SHADERS})
 target_link_libraries(ModelExporter tinyxml2)
