Ispoljzujem generator zagolovocnyh fajlov iz "GLSLangValidator", vmesto sobstvennogo.

--- a/src/Game/CMakeLists.txt
+++ b/src/Game/CMakeLists.txt
@@ -11,20 +11,14 @@ file(GLOB SHADERS "shaders/*")
 foreach(SHADER_FILE ${SHADERS})
 	file(RELATIVE_PATH OUT_FILE ${CMAKE_CURRENT_SOURCE_DIR} ${SHADER_FILE})
 	set(OUT_FILE_BASE ${CMAKE_CURRENT_BINARY_DIR}/${OUT_FILE})
-	string(REPLACE ".glsl" ".sprv" OUT_FILE_SPRV ${OUT_FILE_BASE})
-	string(REPLACE ".glsl" ".sprv.h" OUT_FILE_H ${OUT_FILE_BASE})
+	string(REPLACE ".glsl" ".h" OUT_FILE_H ${OUT_FILE_BASE})
 	get_filename_component(VARIABLE_NAME ${SHADER_FILE} NAME)
 	string(REPLACE ".glsl" "" VARIABLE_NAME ${VARIABLE_NAME})
 	string(REPLACE "." "_" VARIABLE_NAME ${VARIABLE_NAME})
 	add_custom_command(
-		OUTPUT ${OUT_FILE_SPRV}
-		DEPENDS ${SHADER_FILE}
-		COMMAND ${GLSLANGVALIDATOR} -V ${SHADER_FILE} -o ${OUT_FILE_SPRV}
-		)
-	add_custom_command(
 		OUTPUT ${OUT_FILE_H}
-		DEPENDS ${OUT_FILE_SPRV}
-		COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_SOURCE_DIR}/bin2c.cmake ${OUT_FILE_SPRV} ${OUT_FILE_H} ${VARIABLE_NAME}
+		DEPENDS ${SHADER_FILE}
+		COMMAND ${GLSLANGVALIDATOR} -V ${SHADER_FILE} --vn ${VARIABLE_NAME} -o ${OUT_FILE_H}
 		)
 
 	list(APPEND SHADERS_COMPILED ${OUT_FILE_H})
@@ -37,6 +31,7 @@ endforeach()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/ShaderList.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/ShaderList.hpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/ShaderList.cpp.in ${CMAKE_CURRENT_BINARY_DIR}/ShaderList.cpp)
 set(GENERATED_SOURCES ${CMAKE_CURRENT_BINARY_DIR}/ShaderList.hpp ${CMAKE_CURRENT_BINARY_DIR}/ShaderList.cpp)
+set_source_files_properties(${CMAKE_CURRENT_BINARY_DIR}/ShaderList.cpp PROPERTIES OBJECT_DEPENDS ${SHADERS_COMPILED})
 
 # Add target Klassenkampf.
 
